# bls-verifier

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  README.md
.github/workflows/: bls-device.yml
bls-device/: Cargo.toml  manifest.json.tmpl
bls-device/src/: ao.rs  beacon.rs  cache.rs  lib.rs  manifest.rs  primitive.rs  signing_root.rs  x402.rs
bls-device/tests/: integration_fixture.rs  integration_live.rs  network_id_not_reintroduced.rs  no_hardcoded_fork.rs
bls-test/: Cargo.toml
bls-test/src/: main.rs
bls-verifier/: Cargo.toml
bls-verifier/src/: lib.rs
bls-verify-cli/: Cargo.toml
bls-verify-cli/src/: main.rs
docs/: O-700-bls-sync-committee-primitive.md  O-701-hyperbeam-bls-device.md  O-702-bls-device-harness-runbook.md  O-702-bls-device-runbook.md
fixtures/beacon/: README.md
